# dotlock

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: feedback.hpp  gui.hpp  simulation.hpp
src/: feedback.cpp  gui.cpp  main.cpp  simulation.cpp
